Исправления: - теперь на странице станций отображаются только те, город которых был выбран
