# TravelSchedule/Resources/openapi.yaml
@@ -483,7 +483,9 @@ components:
         segments:
           type: array
           items:
-            $ref: '#/components/schemas/Segment'
+            oneOf:
+              - $ref: '#/components/schemas/Segment'
+              - $ref: '#/components/schemas/SegmentTransfer'
         interval_segments:
           type: array
           description: Список интервальных рейсов, движение по которым идет регулярно, но без определенного расписания.
@@ -546,6 +548,13 @@ components:
         has_transfers:
           type: boolean
           description: Признак наличия пересадок по маршруту.
+    SegmentTransfer:
+      type: object
+      properties:
+        segments:
+          type: array
+          items:
+            $ref: '#/components/schemas/Thread'
     Pagination:
       type: object
       properties:
